# forestclaw

./: .gitattributes  .gitignore  .gitignore-build  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  Doxyfile.in  Make.defs  Makefile.am  Makefile.apps  Makefile.fclaw.pre.in  README  README.md  bootstrap  configure.ac  ctest.txt  fclawindent
applications/: CMakeLists.txt  CMakePresets.json  claw3.apps  cudaclaw.apps  cudaclaw.cmake  development.apps  development.cmake  paper.apps  paper.cmake
applications/ForestClawExternalProject/: ForestClawExternalProject.cmake
applications/Mountain/: Makefile.am  afterframe.m  cutcell.ini  example0.ini  example2.ini  fclaw2d_clawpack.ini  fclaw2d_defaults.ini  fclaw2d_map_cart.c  fclaw2d_map_identity.c  fclaw2d_map_mountain.c  mapc2m.m  mapc2m_mountain.m  mountain.cpp  mountain_fort.f  mountain_height.m  mountain_user.H  mountain_user.cpp  mountain_user.h  msh.region  parallel_colors.m  parallelpartitions.m  psi.f  setplot2.m  setprob.f  terrain.ini
applications/Mountain/user_4.6/: setaux.f  tag4refinement.f
applications/Mountain/user_4.x/: mountain_output.f  qinit.f  setaux.f  tag4coarsening.f  tag4refinement.f
applications/NCAR_transport/: README.txt
applications/NCAR_transport/all/: b4step2_transport.f  cosine_bell.f  exact_solution.f  gaussian.f  mapc2m.f  qinit_transport.f  setaux_transport.f  setprob_transport.f  transport_domain.c  transport_options.h  transport_user.cpp  transport_user.h  user5_b4step2_manifold.f90  velocity_wind.f
applications/NCAR_transport/correlatedcb/: Makefile.am  afterframe.m  compute_mixing.f90  correlatedcb.cpp  correlatedcb_output.f  correlatedcb_user.H  correlatedcb_user.cpp  correlatedcb_user.h  example0.ini  example1_cubedsphere.ini  example2_pillowsphere.ini  fclaw2d_clawpack.ini  fclaw2d_defaults.ini  fclaw_options.ini  mapc2m.m  mix_data.f90  plot_mixing.m  tag4refinement.f
applications/NCAR_transport/gaussian/: Makefile.am  afterframe.m  fclaw2d_map_pillowsphere.c  fclaw_options.ini  gaussian.cpp  gaussian_user.cpp  gaussian_user.h  setprob.f
applications/NCAR_transport/slotted_disk/: Makefile  Makefile.am  Makefile.clawpack.inc  Makefile.waveprop.inc  afterframe.m  example0.ini  fclaw2d_defaults.ini  fclaw_options.ini  fdisc.f  mapc2m.m  setcolors.m  setplot2.m  setprob.f  sisc.ini  slotted_disk.cpp  slotted_disk_output.f  slotted_disk_user.H  slotted_disk_user.cpp  slotted_disk_user.h  tag4refinement.f
applications/ash3d/cloud_tester/: Makefile.am  ash3d_input.inp  cloud.cpp  cloud_user.cpp  cloud_user.h  fclaw_options.ini  runAsh3d.sh
applications/clawpack/: CMakeLists.txt  claw3.apps  claw3.cmake  clawpack.apps  clawpack.cmake
applications/cmake/Modules/: add_regressions.cmake  discover_regressions.cmake
applications/cudaclaw/: cudaclaw.apps  cudaclaw.cmake
applications/demo/: demo.apps  demo.cmake
applications/dummy/: CMakeLists.txt  Makefile.am  dummy_blackbox.c  dummy_blackbox.h  dummy_config.ini  fclaw2d_dummy.c
applications/elliptic/: elliptic.apps  elliptic.cmake
applications/elliptic/allencahn/: CMakeLists.txt  Makefile.am  afterframe.m  allencahn.cpp  (+13 more)
applications/geoclaw/: geoclaw.apps  geoclaw.cmake
applications/lowlevel/: CMakeLists.txt  Makefile.am  smooth.c
applications/no_solver/: CMakeLists.txt  Makefile.am  afterframe.m  example1_cart.ini  example2_fivepatch.ini  example3_pillowdisk.ini  example4_pillowdisk5.ini  fclaw2d_defaults.ini  fclaw2d_map_cart.c  fclaw2d_map_fivepatch.c  fclaw2d_map_nomap.c  fclaw2d_map_pillowdisk.c  fclaw2d_map_pillowdisk5.c  fclaw2d_map_pillowfivepatch.c  fclaw2d_map_squareddisk.c  fclaw_options.ini  gem3d_output_mesh.c  gem3d_output_mesh.h  initialize.f  mapc2m.m  no_solver.cpp  no_solver_options.c  no_solver_user.H  no_solver_user.cpp  no_solver_user.h  plot_tikz_fig.m  setplot2.m
applications/paper/: paper.apps  paper.cmake
applications/test_parms/: Makefile.am  example1.ini  example2.ini  fclaw2d_defaults.ini  fclaw_options.ini  setprob.f  test_parms.cpp  test_parms.supp  test_parms_user.H  test_parms_user.cpp
src/: CMakeLists.txt  ClawPatch.H  ClawPatch.cpp  ClawPatch.hpp  Makefile  Makefile.am  Makefile_lib  _fclaw2d_to_fclaw3d.h  _fclaw2d_to_fclaw3dx.h  afterframe.m  amr_advance.cpp  amr_corner_neighbors.cpp  amr_diagnostics.cpp  amr_exchangecoarse.cpp  amr_fill_ghost.cpp  amr_forestclaw.H  amr_forestclaw.cpp  amr_includes.H  amr_levelexchange.cpp  amr_mol.H  amr_mol.cpp  amr_neighbors.cpp  amr_options.c  amr_options.h  amr_output.H  amr_output.cpp  amr_parabolic.cpp  amr_physbc.cpp  amr_regrid.H  amr_regrid.cpp  amr_repartition_domain.cpp  amr_rkc.cpp  amr_single_step.H  amr_single_step.cpp  amr_single_step.h  amr_solver_typedefs.H  amr_timeinterp.cpp  amr_utils.H  amr_utils.cpp  amr_waveprop.H  (+314 more)
src/fortran_source2d/: average_fv1.f  cellave2.f  cellave3.f  claw2d_utils.f  claw2d_utils_mapped.f  claw_out2.f  debug.f  debug.i  diagnostics.f  estimate_error2.f  exchange_fv1.f  exchange_fv2.f  fclaw2d_diagnostics_fort.f  fclaw2d_ghost_pack.f  fclaw2d_interpolate_util.f  fclaw2d_metric_default_fort.f  fclaw2d_metric_integrate_exact.f  fclaw2d_output_ascii_fort.f  fclaw2d_output_fort.f  fclaw2d_regrid_fort.f  fclaw2d_timeinterp_fort.f  fclaw_dopri5.f  fdisc.f  integrate_exact_disk.f  interpolate_fv1.f  mapc2m.f  metric_terms.i  philim.f  phys_corner.f  setup_mesh.f  tag4coarsening.f  tag4refinement.f  timeinterp_interior.f
src/mappings/: block.f  context.f  fclaw2d_map_nomap.c  fclaw2d_map_nomap_brick.c  fclaw_map_nomap.c  fclaw_map_nomap_brick.c  map_query.f  scale_rot_map.f  set_maptype.f
src/private/: register_backward_st.cpp  register_backward_st.h
src/user_fortran_source2d/: average.f  copy.f  diagnostics.f  ghostpack.f  interpolate.f  output_ascii.f  tag4coarsening.f  tag4refinement.f  timeinterp.f
test/: CMakeLists.txt  Makefile.am  advacned_ghostfill.sh  doc-test-driver  regressions-driver  run_test.sh  test.cpp  test.hpp  test_config.h.in
test/fort/: test_2d_clawpatch46_interpolate.f
test/mesh_files/: 2d_uniform_2x2_mpi1.json
test/utils/: DomainReader.cpp  DomainReader.h
(+4787 files in other folders)
